--- a/src/App/Pages/Settings/FolderAddEditPage.xaml
+++ b/src/App/Pages/Settings/FolderAddEditPage.xaml
@@ -24,7 +24,7 @@
     
     <ContentPage.Resources>
         <ResourceDictionary>
-            <ToolbarItem Icon="more_vert.png" Clicked="More_Clicked" Order="Primary" x:Name="_moreItem"
+            <ToolbarItem IconImageSource="more_vert.png" Clicked="More_Clicked" Order="Primary" x:Name="_moreItem"
                          x:Key="moreItem"
                          AutomationProperties.IsInAccessibleTree="True"
                          AutomationProperties.Name="{u:I18n Options}" />
