--- a/src/App/Controls/AccountSwitchingOverlay/AccountSwitchingOverlayView.xaml
+++ b/src/App/Controls/AccountSwitchingOverlay/AccountSwitchingOverlayView.xaml
@@ -2,7 +2,7 @@
 <ContentView
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+    xmlns:xct="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:controls="clr-namespace:Bit.App.Controls"
     xmlns:effects="clr-namespace:Bit.App.Effects"
     xmlns:view="clr-namespace:Bit.Core.Models.View;assembly=BitwardenCore"
@@ -20,10 +20,7 @@
         <Frame
             Padding="0"
             HorizontalOptions="Fill"
-            VerticalOptions="Start"
-            xct:ShadowEffect.Color="Black"
-            xct:ShadowEffect.Radius="10"
-            xct:ShadowEffect.OffsetY="3">
+            VerticalOptions="Start">
             <ListView
                 x:Name="_accountListView"
                 ItemsSource="{Binding BindingContext.AccountViews, Source={x:Reference _mainOverlay}}"
