--- a/src/App/Pages/Accounts/SetPasswordPage.xaml
+++ b/src/App/Pages/Accounts/SetPasswordPage.xaml
@@ -47,7 +47,7 @@
                            Margin="0, 12, 0, 0"
                            HasShadow="False"
                            BackgroundColor="Transparent"
-                           BorderColor="Accent">
+                           BorderColor="Black">
                         <Label
                             Text="{u:I18n ResetPasswordAutoEnrollInviteWarning}"
                             StyleClass="text-muted, text-sm, text-bold"
@@ -69,7 +69,7 @@
                            Margin="0, 12, 0, 0"
                            HasShadow="False"
                            BackgroundColor="Transparent"
-                           BorderColor="Accent">
+                           BorderColor="Black">
                         <Label
                             Text="{Binding PolicySummary}"
                             StyleClass="text-muted, text-sm, text-bold"
