--- a/src/App/Pages/Send/SendAddEditPage.xaml
+++ b/src/App/Pages/Send/SendAddEditPage.xaml
@@ -28,7 +28,7 @@
             <u:IsNotNullConverter x:Key="notNull" />
             <ToolbarItem Text="{u:I18n Cancel}" Clicked="Close_Clicked" Order="Primary" Priority="-1"
                          x:Key="closeItem" x:Name="_closeItem" />
-            <ToolbarItem Icon="more_vert.png" Clicked="More_Clicked" Order="Primary" x:Name="_moreItem"
+            <ToolbarItem IconImageSource="more_vert.png" Clicked="More_Clicked" Order="Primary" x:Name="_moreItem"
                          x:Key="moreItem"
                          AutomationProperties.IsInAccessibleTree="True"
                          AutomationProperties.Name="{u:I18n Options}" />
@@ -66,7 +66,7 @@
                             Margin="0, 12, 0, 0"
                             HasShadow="False"
                             BackgroundColor="Transparent"
-                            BorderColor="Accent">
+                            BorderColor="Black">
                             <Label
                                 Text="{u:I18n SendDisabledWarning}"
                                 StyleClass="text-muted, text-sm, text-bold"
@@ -78,7 +78,7 @@
                             Margin="0, 12, 0, 0"
                             HasShadow="False"
                             BackgroundColor="Transparent"
-                            BorderColor="Accent">
+                            BorderColor="Black">
                             <Label
                                 Text="{u:I18n SendOptionsPolicyInEffect}"
                                 StyleClass="text-muted, text-sm, text-bold"
